# cpp-examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
01-linear-algorithms/DemoAssignment/: CMakeLists.txt  main.cpp  std_lib_facilities.h
01-linear-algorithms/DemoCMath/: CMakeLists.txt  main.cpp
01-linear-algorithms/DemoComma/: CMakeLists.txt  main.cpp
01-linear-algorithms/DemoDataTypes/: CMakeLists.txt  main.cpp
01-linear-algorithms/DemoLocal/: CMakeLists.txt  main.cpp
01-linear-algorithms/DemoLocal-ver2/: CMakeLists.txt  main.cpp
01-linear-algorithms/HelloWorld/: CMakeLists.txt  main.cpp
02-selection-statements/DemoScope/: CMakeLists.txt  main.cpp
02-selection-statements/DemoSqrt/: CMakeLists.txt  main.cpp
02-selection-statements/DemoStaticAssert/: CMakeLists.txt  main.cpp
02-selection-statements/DemoSwitch/: CMakeLists.txt  main.cpp
02-selection-statements/DemoTernaryStatement/: CMakeLists.txt  main.cpp
03-loop-statements/Demo2DementionalArray/: CMakeLists.txt  main.cpp
03-loop-statements/DemoAuto/: CMakeLists.txt  main.cpp
03-loop-statements/DemoBreakContinue/: CMakeLists.txt  main.cpp
03-loop-statements/DemoBubbleSort/: CMakeLists.txt  main.cpp
03-loop-statements/DemoForLoop/: CMakeLists.txt  main.cpp
03-loop-statements/DemoInsertSort/: CMakeLists.txt  main.cpp
03-loop-statements/DemoInsertSortBinarySearch/: CMakeLists.txt  main.cpp
03-loop-statements/DemoIsPalindrome/: CMakeLists.txt  main.cpp
03-loop-statements/DemoLoops/: CMakeLists.txt  main.cpp
03-loop-statements/DemoSelectionSort/: CMakeLists.txt  main.cpp
03-loop-statements/DemoShakerSort/: CMakeLists.txt  main.cpp
04-functions/Demo01Functions/: CMakeLists.txt  main.cpp
04-functions/Demo02Return/: CMakeLists.txt  main.cpp
04-functions/Demo03Sum/: CMakeLists.txt
04-functions/Demo04Inline/: CMakeLists.txt  example.h  main.cpp
04-functions/Demo05Recursion/: CMakeLists.txt  main.cpp
04-functions/Demo20Cmake/: CMakeLists.txt  iolib.cpp  iolib.h  main.cpp
04-functions/DemoChrono/: CMakeLists.txt  main.cpp
04-functions/DemoConstReference/: CMakeLists.txt  main.cpp
04-functions/DemoDefaultValue/: CMakeLists.txt  main.cpp
04-functions/DemoFunctions/: CMakeLists.txt  main.cpp
04-functions/DemoInline/: CMakeLists.txt  f_a.h  f_b.h  main.cpp
04-functions/DemoOverload/: CMakeLists.txt  main.cpp
04-functions/DemoReturn/: CMakeLists.txt  main.cpp
04-functions/DemoSqrtK/: CMakeLists.txt  main.cpp
04-functions/DemoSum/: Arithmetic.cpp  Arithmetic.h  CMakeLists.txt  main.cpp
04-functions/DemoSwapOverload/: CMakeLists.txt  main.cpp
04-functions/DemoSwapTemplate/: CMakeLists.txt  main.cpp
05-containers/DemoLambda/: CMakeLists.txt  main.cpp
05-containers/DemoMapMultimap/: CMakeLists.txt  main.cpp
05-containers/DemoSetMiltiset/: main.cpp
05-containers/DemoStlBasicAlgorithms/: CMakeLists.txt  stl_basic_algorithms.cpp
05-containers/DemoVectorArray/: CMakeLists.txt  main.cpp
05-contaners/DemoSetMiltiset/: CMakeLists.txt  main.cpp
05-contaners/DemoVectorArray/: vector_array_io.h
06-streams/DemoEOF/: CMakeLists.txt  main.cpp
06-streams/DemoFStreamBasics/: CMakeLists.txt  io_file.cpp  io_file.h  main.cpp
06-streams/DemoFunctionValues/: CMakeLists.txt  main.cpp
07-structures-classes/DemoArray/: CMakeLists.txt  main.cpp
07-structures-classes/DemoArray/data/: inputListDouble.txt
07-structures-classes/DemoArray/src/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
07-structures-classes/DemoArray/src/controller/: IOConsole.cpp  IOConsole.h  Program.cpp  Program.h  inputOutputFunctions.h
07-structures-classes/DemoArray/src/dataaccesslayer/: FileReader.cpp  FileReader.h
07-structures-classes/DemoArray/src/entity/: Array.cpp  Array.h  ArrayOnVector.cpp  ArrayOnVector.h
07-structures-classes/DemoArray/src/service/: ArrayCreator.cpp  ArrayCreator.h  ArrayOnVectorService.cpp  ArrayOnVectorService.h  ArrayService.cpp  ArrayService.h  SourceQuickSort.cpp  sorting.h
07-structures-classes/DemoClass/: CMakeLists.txt  main.cpp
07-structures-classes/DemoClassGeometry/: CMakeLists.txt  main.cpp
07-structures-classes/DemoConstructors/: CMakeLists.txt
07-structures-classes/DemoConstructors&ObjectInitialization/: CMakeLists.txt
07-structures-classes/DemoFriendFunctions/: CMakeLists.txt  main.cpp
07-structures-classes/DemoOperatorOverloading/: BankAccount.cpp  BankAccount.h  BankAccountList.cpp  BankAccountList.h  CMakeLists.txt  DollarAccout.cpp  DollarAccout.h  Time.cpp  Time.h  main.cpp
07-structures-classes/DemoOwn_to_string/: CMakeLists.txt  main.cpp
07-structures-classes/DemoStructure/: CMakeLists.txt  main.cpp
07-structures-classes/DemoStructure&Functions/: CMakeLists.txt  main.cpp
07-structures-classes/DemoStructureInitValues/: CMakeLists.txt  main.cpp
07-structures-classes/DemoStructureInternalDeclaration/: CMakeLists.txt  main.cpp
07-structures-classes/DemoUnion/: CMakeLists.txt  main.cpp
08-exceptions/DemoDivide/: CMakeLists.txt  main.cpp
08-exceptions/DemoException/: CMakeLists.txt  main.cpp
08-exceptions/DemoGlog/: CMakeLists.txt  main.cpp
08-exceptions/DemoGlog/lib/glog/include/glog/: logging.h  vlog_is_on.h
08-exceptions/DemoGlog/lib/glog/lib/cmake/glog/: glog-targets-debug.cmake  glog-targets.cmake
08-exceptions/DemoSpdLog/: CMakeLists.txt
08-exceptions/DemoSpdLog/src/: main.cpp
08-exceptions/DemoTryCatchThrow/: CMakeLists.txt  main.cpp
09-unittesting/DemoArithmeticWithGtest/: CMakeLists.txt
09-unittesting/DemoArithmeticWithGtest/test/: hello_test.cc
09-unittesting/DemoGoogleTest/: CMakeLists.txt  main.cpp
09-unittesting/DemoGoogleTest/src/: CMakeLists.txt  arithmeticlib.cpp  arithmeticlib.h  main.cpp
09-unittesting/DemoGoogleTest/test/: CMakeLists.txt  tests.cc  tests.cpp
10-Memory/DemoAddressSanitizer/: CMakeLists.txt  main.cpp
10-Memory/DemoStack/test/: CMakeLists.txt  StackTest.cc
70-project-code-blanks-with-spdlog-gtest/: CMakeLists.txt
70-project-code-blanks-with-spdlog-gtest/src/: CMakeLists.txt  main.cpp
70-project-code-blanks-with-spdlog-gtest/test/: CMakeLists.txt
(+111 files in other folders)
